--- a/success_french.html
+++ b/success_french.html
@@ -2,25 +2,24 @@
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Wokovuway Org.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Organisation Humanitaire Wokovuway">
-    <meta name="keywords" content="Wokovuway, humanitaire, Congo, éducation, charité, réactif">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Services - Wokovuway Org.</title>
+    <meta name="description"
+        content="Découvrez les services humanitaires offerts par l'Organisation Wokovuway au Congo et au-delà">
+    <meta name="keywords" content="Wokovuway, services, humanitaire, Congo, charité, éducation, aide">
     <meta name="author" content="Wokovuway">
-
-    <link rel="stylesheet" href="css/sucess.css">
+    <link rel="stylesheet" href="css/service.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
     <div id="wokovuway-wrapper">
-
-        <!-- Header & Navigation -->
+        <!-- En-tête & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
-                <a href="#" class="logo">
+                <a href="index_french.html" class="logo">
                     <img src="images/logos1.png" alt="Logo Wokovuway" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
@@ -28,127 +27,123 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="index_french.html">Accueil</a></li>
-                        <li><a href="about_french.html" class="active">À propos de nous</a></li>
+                        <li><a href="about_french.html">À propos de nous</a></li>
                         <li><a href="team_french.html">Notre équipe</a></li>
                         <li><a href="success_french.html">Histoires de succès</a></li>
                         <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="contact_french.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="#" id="translate-link"><i class="fas fa-globe"></i> EN</a>
+                            <a href="success.html" title="Passer à l'anglais">
+                                <i class="fas fa-globe"></i> EN
+                            </a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </header>
 
-        <div id="tm-video-container">
-            <video autoplay muted loop id="tm-video">
-                <source src="video/Camp_displace_fam.mp4" type="video/mp4">
-                Votre navigateur ne prend pas en charge la balise vidéo.
-            </video>
-            <i id="tm-video-control-button" class="fas fa-pause"></i>
+        <div class="container">
+            <!-- Titre de la page -->
+            <h1 class="page-title">Nos Services</h1>
+
+            <!-- Introduction -->
+            <section class="services-section">
+                <h2>Renforcer les communautés</h2>
+                <p>À l'Organisation Wokovuway, nous offrons une gamme de services humanitaires visant à améliorer la vie
+                    des populations vulnérables en République Démocratique du Congo et au-delà. Nos programmes sont
+                    conçus pour répondre aux besoins immédiats tout en favorisant une résilience et une croissance à
+                    long terme. Dernière mise à jour : 13 mars 2025.</p>
+            </section>
+
+            <!-- Aide humanitaire -->
+            <section class="services-section">
+                <h2>Aide humanitaire</h2>
+                <div class="service-item">
+                    <h3>Secours d’urgence</h3>
+                    <p>Nous fournissons des fournitures essentielles telles que de la nourriture, de l’eau, des abris et
+                        des soins médicaux aux communautés touchées par les conflits, les déplacements ou les
+                        catastrophes naturelles.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Services de santé</h3>
+                    <p>Nos cliniques mobiles et programmes de sensibilisation à la santé offrent des soins médicaux
+                        essentiels, des vaccins et un soutien à la santé maternelle dans les zones mal desservies.</p>
+                </div>
+            </section>
+
+            <!-- Éducation et formation -->
+            <section class="services-section">
+                <h2>Éducation et formation</h2>
+                <div class="service-item">
+                    <h3>Programmes d’alphabétisation</h3>
+                    <p>Nous proposons une éducation de base aux enfants et aux adultes, les aidant à acquérir des
+                        compétences en lecture et en calcul pour améliorer leurs opportunités.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Formation professionnelle</h3>
+                    <p>Grâce à des ateliers et des cours de développement de compétences, nous dotons les individus de
+                        métiers tels que la couture, la menuiserie et l’agriculture pour atteindre l’autosuffisance.</p>
+                </div>
+            </section>
+
+            <!-- Autonomisation communautaire -->
+            <section class="services-section">
+                <h2>Autonomisation communautaire</h2>
+                <div class="service-item">
+                    <h3>Autonomisation des femmes</h3>
+                    <p>Nous soutenons les femmes avec des ressources, des formations et des opportunités de microfinance
+                        pour démarrer de petites entreprises et diriger leurs communautés.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Développement des jeunes</h3>
+                    <p>Nos programmes engagent les jeunes à travers le mentorat, la formation au leadership et des
+                        activités récréatives pour construire un avenir meilleur.</p>
+                </div>
+            </section>
+
+            <!-- Impliquez-vous -->
+            <section class="services-section">
+                <h2>Impliquez-vous</h2>
+                <p>Voulez-vous soutenir nos services ? Vous pouvez faire une différence en :</p>
+                <ul class="involvement-list">
+                    <li><a href="donate_fr.html">Faisant un don</a> pour financer nos programmes.</li>
+                    <li><a href="volunteer_fr.html">Devenant bénévole</a> avec votre temps et vos compétences.</li>
+                    <li><a href="contact_fr.html">Nous contactant</a> pour en savoir plus sur les opportunités de
+                        partenariat.</li>
+                </ul>
+            </section>
+
+            <!-- Contactez-nous -->
+            <section class="services-section">
+                <h2>Contactez-nous</h2>
+                <p>Pour plus d’informations sur nos services, contactez-nous :</p>
+                <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
+                <p><strong>Téléphone :</strong> +243 123 456 789</p>
+                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
+            </section>
         </div>
 
-        <section class="success-stories container">
-            <div class="row text-center">
-                <h1>Nos Réalisations</h1>
-                <div class="welcome-text">
-                    <p>Ensemble, nous faisons une différence dans la vie de nombreux individus.</p>
-                    <p>Nous devons notre succès à vous.</p>
-                </div>
-            </div>
-            <div class="row catalog-items">
-                <div class="catalog-item">
-                    <div class="thumbnail">
-                        <img src="images/new_tents.JPG" alt="Protéger les Communautés">
-                        <i class="fas fa-play overlay-icon"></i>
-                    </div>
-                    <div class="description">
-                        <h3>Protéger les Communautés</h3>
-                        <p>Plus de 3 000 vies touchées : Distribution de bâches aux communautés vulnérables, offrant
-                            abri, protection et sécurité en temps de crise.</p>
-                    </div>
-                </div>
-                <div class="catalog-item">
-                    <div class="thumbnail">
-                        <img src="images/health1.png" alt="Soins de Santé">
-                        <i class="fas fa-play overlay-icon"></i>
-                    </div>
-                    <div class="description">
-                        <h3>Soins de Santé</h3>
-                        <p>Amélioration du bien-être grâce à des médicaments essentiels, une éducation à
-                            l’assainissement et des initiatives de santé pour les femmes et les enfants.</p>
-                    </div>
-                </div>
-                <div class="catalog-item">
-                    <div class="thumbnail">
-                        <img src="images/school.jpg" alt="Gestion de l’Hygiène Menstruelle">
-                        <i class="fas fa-play overlay-icon"></i>
-                    </div>
-                    <div class="description">
-                        <h3>Gestion de l’Hygiène Menstruelle</h3>
-                        <p>Fourniture de produits sanitaires, d’éducation et d’installations d’assainissement pour
-                            assurer l’hygiène et la santé reproductive des filles et des femmes.</p>
-                    </div>
-                </div>
-                <div class="catalog-item">
-                    <div class="thumbnail">
-                        <img src="images/women_emp.jpg" alt="Autonomisation des Femmes">
-                        <i class="fas fa-play overlay-icon"></i>
-                    </div>
-                    <div class="description">
-                        <h3>Autonomisation des Femmes</h3>
-                        <p>Promotion de traits de masculinité positive comme la confiance et le leadership pour briser
-                            les stéréotypes de genre et favoriser l’égalité.</p>
-                    </div>
-                </div>
-                <div class="catalog-item">
-                    <div class="thumbnail">
-                        <img src="images/c636205b-b5bc-4a1e-ab2e-7af64955450c.JPG" alt="Espaces Sûrs">
-                        <i class="fas fa-play overlay-icon"></i>
-                    </div>
-                    <div class="description">
-                        <h3>Espaces Sûrs et Sécurité</h3>
-                        <p>Création d’environnements sécurisés avec accès à des commodités essentielles, favorisant la
-                            confiance, la dignité et les opportunités.</p>
-                    </div>
-                </div>
-                <div class="catalog-item">
-                    <div class="thumbnail">
-                        <img src="images/mobile-kitch.jpg" alt="Sensibilisation Impactante">
-                        <i class="fas fa-play overlay-icon"></i>
-                    </div>
-                    <div class="description">
-                        <h3>Sensibilisation Impactante</h3>
-                        <p>Faire une différence grâce à un soutien éducatif et une assistance caritative dans les
-                            communautés.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
+        <!-- Pied de page -->
         <footer>
             <div class="container">
                 <div class="footer-row">
                     <div class="footer-column">
                         <h4>À propos de nous</h4>
                         <p>Wokovu Way renforce les communautés par l’innovation et le soutien.</p>
-                        <a href="about.html" class="read-more">En savoir plus</a>
+                        <a href="about_french.html" class="read-more">En savoir plus</a>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
                         <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
                         <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
                         <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
-                        <a
-                            href="mailto:info@wokovuway.org?subject=Inquiry&body=Bonjour, j’ai une question à propos de...">
+                        <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
                     </div>
                     <div class="footer-column">
                         <h4>Liens rapides</h4>
                         <ul>
-                            <!-- liens pertinents dans le pied de page -->
                             <li><a href="index_french.html">Accueil</a></li>
                             <li><a href="about_french.html">À propos de nous</a></li>
                             <li><a href="service_fr.html">Services</a></li>
@@ -156,50 +151,48 @@
                             <li><a href="privacy_fr.html">Confidentialité et politique</a></li>
                         </ul>
                     </div>
-
-                    <!-- le reste des liens -->
-
                     <div class="footer-column">
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms_french.html">Conditions générales</a></li>
-                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
-                            <li><a href="faq_fr.html">FAQ</a></li>
-                            <li><a href="newsletter_fr.html">Lettre d’information</a></li>
-                            <li><a href="volunteer_fr.html">Bénévole</a></li>
+                            <li><a href="terms.html">Terms and Conditions</a></li>
+                            <li><a href="accessibility.html">Accessibility Statement</a></li>
+                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <ul>
+                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                            </ul>
+
+                            <li><a href="volunteer.html">Volunteer</a></li>
                         </ul>
                     </div>
-
                     <div class="footer-column">
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
-                                    class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
-                                    class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
-                        <h4>Nos partenaires</h4>
-                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png"
-                                alt="Partenaire 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                                alt="Partenaire 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                                alt="Partenaire 3"></a>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png"
-                                alt="Partenaire 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
+                            alt="Partner 1"></a>
+                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
+                            alt="Partner 2"></a>
+                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
+                            alt="Partner 3"></a>
+                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
+                            alt="Partner 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p>Conçu par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
             </div>
         </footer>
-        <script src="js/success.js"></script>
+    </div>
+
+    <script src="js/services.js"></script>
 </body>
 
 </html>
