--- a/terms_french.html
+++ b/terms_french.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,64 +12,85 @@
     <link rel="stylesheet" href="css/terms.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <div id="wokovuway-wrapper">
         <!-- En-tête & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
-                <a href="index.html" class="logo">
+                <a href="index_french.html" class="logo">
                     <img src="images/logos1.png" alt="Logo Wokovuway" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
                 <div class="hamburger"><i class="fas fa-bars"></i></div>
                 <nav class="nav-menu">
                     <ul>
-                        <li><a href="index.html">Accueil</a></li>
-                        <li><a href="about.html">À propos</a></li>
-                        <li><a href="team.html">Notre équipe</a></li>
-                        <li><a href="success.html">Histoires de succès</a></li>
-                        <li><a href="donate.html">Faire un don</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index_french.html">Accueil</a></li>
+                        <li><a href="about_french.html">À propos de nous</a></li>
+                        <li><a href="team_french.html">Notre équipe</a></li>
+                        <li><a href="success_french.html">Histoires de succès</a></li>
+                        <li><a href="donate_french.html">Faire un don</a></li>
+                        <li><a href="contact_french.html">Contact</a></li>
+
+                        <li class="lang-toggle">
+                            <a href="terms.html" title="Passer à l'anglais">
+                                <i class="fas fa-globe"></i> EN
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
         </header>
-
         <div class="container">
             <!-- Titre de la page -->
             <h1 class="page-title">Conditions d'utilisation</h1>
-            
+
             <!-- Introduction -->
             <section class="terms-section">
                 <h2>Introduction</h2>
-                <p>Bienvenue sur le site de l'Organisation à but non lucratif Wokovuway. Ces Conditions d'utilisation ("Conditions") régissent votre accès et votre utilisation de notre site web, de nos services et de tout contenu connexe (collectivement, "Services"). En accédant ou en utilisant nos Services, vous acceptez d'être lié par ces Conditions. Si vous n'acceptez pas, veuillez vous abstenir d'utiliser nos Services. Ces Conditions ont été mises à jour pour la dernière fois le 13 mars 2025.</p>
+                <p>Bienvenue sur le site de l'Organisation à but non lucratif Wokovuway. Ces Conditions d'utilisation
+                    ("Conditions") régissent votre accès et votre utilisation de notre site web, de nos services et de
+                    tout contenu connexe (collectivement, "Services"). En accédant ou en utilisant nos Services, vous
+                    acceptez d'être lié par ces Conditions. Si vous n'acceptez pas, veuillez vous abstenir d'utiliser
+                    nos Services. Ces Conditions ont été mises à jour pour la dernière fois le 13 mars 2025.</p>
             </section>
 
             <!-- Utilisation des Services -->
             <section class="terms-section">
                 <h2>Utilisation des Services</h2>
-                <p>Vous acceptez d'utiliser nos Services uniquement à des fins légales et conformément à ces Conditions. Vous ne devez pas :</p>
+                <p>Vous acceptez d'utiliser nos Services uniquement à des fins légales et conformément à ces Conditions.
+                    Vous ne devez pas :</p>
                 <ul>
-                    <li>Utiliser les Services pour participer à des activités illégales ou promouvoir des comportements nuisibles.</li>
-                    <li>Modifier, reproduire ou distribuer tout contenu de nos Services sans autorisation écrite préalable.</li>
-                    <li>Interférer ou perturber le fonctionnement des Services, y compris par piratage ou introduction de code malveillant.</li>
-                    <li>Usurper l’identité d’une personne ou d’une entité ou faussement prétendre être affilié à Wokovuway.</li>
+                    <li>Utiliser les Services pour participer à des activités illégales ou promouvoir des comportements
+                        nuisibles.</li>
+                    <li>Modifier, reproduire ou distribuer tout contenu de nos Services sans autorisation écrite
+                        préalable.</li>
+                    <li>Interférer ou perturber le fonctionnement des Services, y compris par piratage ou introduction
+                        de code malveillant.</li>
+                    <li>Usurper l’identité d’une personne ou d’une entité ou faussement prétendre être affilié à
+                        Wokovuway.</li>
                 </ul>
             </section>
 
             <!-- Propriété Intellectuelle -->
             <section class="terms-section">
                 <h2>Propriété Intellectuelle</h2>
-                <p>Tout le contenu de nos Services, y compris les textes, images, logos et designs, appartient à Wokovuway ou à ses concédants de licence et est protégé par les lois sur le droit d’auteur, les marques déposées et autres lois sur la propriété intellectuelle. Vous ne pouvez pas utiliser notre contenu à des fins commerciales sans autorisation explicite. Une utilisation personnelle et non commerciale est autorisée à condition de conserver tous les avis de droit d’auteur.</p>
+                <p>Tout le contenu de nos Services, y compris les textes, images, logos et designs, appartient à
+                    Wokovuway ou à ses concédants de licence et est protégé par les lois sur le droit d’auteur, les
+                    marques déposées et autres lois sur la propriété intellectuelle. Vous ne pouvez pas utiliser notre
+                    contenu à des fins commerciales sans autorisation explicite. Une utilisation personnelle et non
+                    commerciale est autorisée à condition de conserver tous les avis de droit d’auteur.</p>
             </section>
 
             <!-- Dons -->
             <section class="terms-section">
                 <h2>Dons</h2>
-                <p>Les dons effectués via nos Services sont volontaires et non remboursables sauf indication contraire. En faisant un don, vous acceptez que :</p>
+                <p>Les dons effectués via nos Services sont volontaires et non remboursables sauf indication contraire.
+                    En faisant un don, vous acceptez que :</p>
                 <ul>
                     <li>Vos informations de paiement soient exactes et que vous soyez autorisé à les utiliser.</li>
-                    <li>Les fonds soient utilisés pour soutenir les initiatives humanitaires de Wokovuway à notre discrétion.</li>
+                    <li>Les fonds soient utilisés pour soutenir les initiatives humanitaires de Wokovuway à notre
+                        discrétion.</li>
                     <li>Nous puissions reconnaître publiquement votre don, sauf si vous demandez l’anonymat.</li>
                 </ul>
             </section>
@@ -76,15 +98,20 @@
             <!-- Contenu des Utilisateurs -->
             <section class="terms-section">
                 <h2>Contenu des Utilisateurs</h2>
-                <p>Si vous soumettez du contenu (par exemple, commentaires, témoignages ou photos) à nos Services, vous accordez à Wokovuway une licence non exclusive, gratuite et mondiale pour utiliser, reproduire et afficher ce contenu à des fins promotionnelles ou opérationnelles. Vous garantissez que votre contenu n’enfreint pas les droits de tiers ni les lois applicables.</p>
+                <p>Si vous soumettez du contenu (par exemple, commentaires, témoignages ou photos) à nos Services, vous
+                    accordez à Wokovuway une licence non exclusive, gratuite et mondiale pour utiliser, reproduire et
+                    afficher ce contenu à des fins promotionnelles ou opérationnelles. Vous garantissez que votre
+                    contenu n’enfreint pas les droits de tiers ni les lois applicables.</p>
             </section>
 
             <!-- Limitation de Responsabilité -->
             <section class="terms-section">
                 <h2>Limitation de Responsabilité</h2>
-                <p>Wokovuway fournit les Services "tels quels" sans aucune garantie. Dans la mesure maximale permise par la loi, nous ne sommes pas responsables :</p>
+                <p>Wokovuway fournit les Services "tels quels" sans aucune garantie. Dans la mesure maximale permise par
+                    la loi, nous ne sommes pas responsables :</p>
                 <ul>
-                    <li>Des dommages indirects, accessoires ou consécutifs découlant de votre utilisation des Services.</li>
+                    <li>Des dommages indirects, accessoires ou consécutifs découlant de votre utilisation des Services.
+                    </li>
                     <li>Des interruptions, erreurs ou inexactitudes dans les Services.</li>
                     <li>De la perte de données ou d’un accès non autorisé hors de notre contrôle raisonnable.</li>
                 </ul>
@@ -93,19 +120,25 @@
             <!-- Résiliation -->
             <section class="terms-section">
                 <h2>Résiliation</h2>
-                <p>Nous nous réservons le droit de suspendre ou de résilier votre accès aux Services à notre discrétion, notamment en cas de violation de ces Conditions. En cas de résiliation, votre droit d’utiliser les Services cessera immédiatement.</p>
+                <p>Nous nous réservons le droit de suspendre ou de résilier votre accès aux Services à notre discrétion,
+                    notamment en cas de violation de ces Conditions. En cas de résiliation, votre droit d’utiliser les
+                    Services cessera immédiatement.</p>
             </section>
 
             <!-- Loi Applicable -->
             <section class="terms-section">
                 <h2>Loi Applicable</h2>
-                <p>Ces Conditions sont régies par les lois de la République Démocratique du Congo (RDC). Tout litige découlant de ces Conditions sera résolu devant les tribunaux de Goma, RDC, sauf disposition contraire de la loi.</p>
+                <p>Ces Conditions sont régies par les lois de la République Démocratique du Congo (RDC). Tout litige
+                    découlant de ces Conditions sera résolu devant les tribunaux de Goma, RDC, sauf disposition
+                    contraire de la loi.</p>
             </section>
 
             <!-- Modifications des Conditions -->
             <section class="terms-section">
                 <h2>Modifications de ces Conditions</h2>
-                <p>Nous pouvons mettre à jour ces Conditions périodiquement. Les modifications seront publiées sur cette page avec la date de mise à jour. Votre utilisation continue des Services après les modifications constitue une acceptation des Conditions révisées.</p>
+                <p>Nous pouvons mettre à jour ces Conditions périodiquement. Les modifications seront publiées sur cette
+                    page avec la date de mise à jour. Votre utilisation continue des Services après les modifications
+                    constitue une acceptation des Conditions révisées.</p>
             </section>
 
             <!-- Contactez-nous -->
@@ -125,22 +158,20 @@
                     <div class="footer-column">
                         <h4>À propos de nous</h4>
                         <p>Wokovu Way renforce les communautés par l’innovation et le soutien.</p>
-                        <a href="about.html" class="read-more">En savoir plus</a>
+                        <a href="about_french.html" class="read-more">En savoir plus</a>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
                         <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
                         <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
                         <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
-                        <a
-                            href="mailto:info@wokovuway.org?subject=Inquiry&body=Bonjour, j’ai une question à propos de...">
+                        <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
                     </div>
                     <div class="footer-column">
                         <h4>Liens rapides</h4>
                         <ul>
-                            <!-- liens pertinents dans le pied de page -->
                             <li><a href="index_french.html">Accueil</a></li>
                             <li><a href="about_french.html">À propos de nous</a></li>
                             <li><a href="service_fr.html">Services</a></li>
@@ -148,51 +179,48 @@
                             <li><a href="privacy_fr.html">Confidentialité et politique</a></li>
                         </ul>
                     </div>
-
-                    <!-- le reste des liens -->
-
                     <div class="footer-column">
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms_french.html">Conditions générales</a></li>
-                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
-                            <li><a href="faq_fr.html">FAQ</a></li>
-                            <li><a href="newsletter_fr.html">Lettre d’information</a></li>
-                            <li><a href="volunteer_fr.html">Bénévole</a></li>
+                            <li><a href="terms.html">Terms and Conditions</a></li>
+                            <li><a href="accessibility.html">Accessibility Statement</a></li>
+                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <ul>
+                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                            </ul>
+
+                            <li><a href="volunteer.html">Volunteer</a></li>
                         </ul>
                     </div>
-
                     <div class="footer-column">
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
-                                    class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
-                                    class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
-                        <h4>Nos partenaires</h4>
-                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png"
-                                alt="Partenaire 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                                alt="Partenaire 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                                alt="Partenaire 3"></a>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png"
-                                alt="Partenaire 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
+                            alt="Partner 1"></a>
+                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
+                            alt="Partner 2"></a>
+                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
+                            alt="Partner 3"></a>
+                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
+                            alt="Partner 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p>Conçu par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
             </div>
         </footer>
     </div>
 
     <script src="js/conditions.js"></script>
 </body>
+
 </html>
