--- a/index_french.html
+++ b/index_french.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="wokovuway-wrapper">
-        <!-- Header & Navigation -->
+        <!-- En-tête & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
                 <a href="index_french.html" class="logo">
@@ -24,20 +24,20 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="index_french.html">Accueil</a></li>
-                        <li><a href="about_french.html" class="active">À propos de nous</a></li>
+                        <li><a href="about_french.html">À propos de nous</a></li>
                         <li><a href="team_french.html">Notre équipe</a></li>
-                        <li><a href="">Histoires de succès</a></li>
+                        <li><a href="success_french.html">Histoires de succès</a></li>
                         <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="contact_french.html">Contact</a></li>
-                        
                         <li class="lang-toggle">
-                            <a href="" id="translate-link"><i class="fas fa-globe"></i> EN</a>
+                            <a href="index.html" title="Passer à l'anglais">
+                                <i class="fas fa-globe"></i> EN
+                            </a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </header>
-
         <!-- Hero Section -->
         <section id="wokovuway-hero">
             <div class="slider">
@@ -65,7 +65,6 @@
             </div>
             <div class="slider-dots"></div>
         </section>
-
         <!-- Features Section -->
         <section id="wokovuway-features">
             <div class="features-container">
@@ -142,22 +141,20 @@
                     <div class="footer-column">
                         <h4>À propos de nous</h4>
                         <p>Wokovu Way renforce les communautés par l’innovation et le soutien.</p>
-                        <a href="about.html" class="read-more">En savoir plus</a>
+                        <a href="about_french.html" class="read-more">En savoir plus</a>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
                         <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
                         <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
                         <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
-                        <a
-                            href="mailto:info@wokovuway.org?subject=Inquiry&body=Bonjour, j’ai une question à propos de...">
+                        <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
                     </div>
                     <div class="footer-column">
                         <h4>Liens rapides</h4>
                         <ul>
-                            <!-- liens pertinents dans le pied de page -->
                             <li><a href="index_french.html">Accueil</a></li>
                             <li><a href="about_french.html">À propos de nous</a></li>
                             <li><a href="service_fr.html">Services</a></li>
@@ -165,47 +162,43 @@
                             <li><a href="privacy_fr.html">Confidentialité et politique</a></li>
                         </ul>
                     </div>
-
-                    <!-- le reste des liens -->
-
                     <div class="footer-column">
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms_french.html">Conditions générales</a></li>
-                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
-                            <li><a href="faq_fr.html">FAQ</a></li>
-                            <li><a href="newsletter_fr.html">Lettre d’information</a></li>
-                            <li><a href="volunteer_fr.html">Bénévole</a></li>
+                            <li><a href="terms.html">Terms and Conditions</a></li>
+                            <li><a href="accessibility.html">Accessibility Statement</a></li>
+                            <a href="faq_fr.html" target="_blank">FAQ</a>
+                            <ul>
+                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                            </ul>
+
+                            <li><a href="volunteer.html">Volunteer</a></li>
                         </ul>
                     </div>
-
                     <div class="footer-column">
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
-                                    class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
-                                    class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
-                        <h4>Nos partenaires</h4>
-                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png"
-                                alt="Partenaire 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                                alt="Partenaire 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                                alt="Partenaire 3"></a>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png"
-                                alt="Partenaire 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
+                            alt="Partner 1"></a>
+                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
+                            alt="Partner 2"></a>
+                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
+                            alt="Partner 3"></a>
+                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
+                            alt="Partner 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p>Conçu par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
             </div>
         </footer>
     </div>
