--- a/service_fr.html
+++ b/service_fr.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Politique de confidentialité - Wokovuway Org.</title>
-    <meta name="description" content="Politique de confidentialité de l’Organisation Wokovuway">
-    <meta name="keywords" content="Wokovuway, politique de confidentialité, humanitaire, Congo, charité">
+    <title>Services - Wokovuway Org.</title>
+    <meta name="description" content="Découvrez les services humanitaires offerts par l'Organisation Wokovuway au Congo et au-delà">
+    <meta name="keywords" content="Wokovuway, services, humanitaire, Congo, charité, éducation, aide">
     <meta name="author" content="Wokovuway">
-    <link rel="stylesheet" href="css/privacy.css">
+    <link rel="stylesheet" href="css/service.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -16,19 +16,24 @@
         <!-- En-tête & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
-                <a href="index.html" class="logo">
+                <a href="index_french.html" class="logo">
                     <img src="images/logos1.png" alt="Logo Wokovuway" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
                 <div class="hamburger"><i class="fas fa-bars"></i></div>
                 <nav class="nav-menu">
                     <ul>
-                        <li><a href="index.html">Accueil</a></li>
-                        <li><a href="about.html" class="active">À propos</a></li>
-                        <li><a href="team.html">Notre équipe</a></li>
-                        <li><a href="success.html">Histoires de succès</a></li>
-                        <li><a href="donate.html">Faire un don</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index_french.html">Accueil</a></li>
+                        <li><a href="about_french.html">À propos de nous</a></li>
+                        <li><a href="team_french.html">Notre équipe</a></li>
+                        <li><a href="success_french.html">Histoires de succès</a></li>
+                        <li><a href="donate_french.html">Faire un don</a></li>
+                        <li><a href="contact_french.html">Contact</a></li>
+                        <li class="lang-toggle">
+                            <a href="service.html" title="Passer à l'anglais">
+                                <i class="fas fa-globe"></i> EN
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -36,84 +41,71 @@
 
         <div class="container">
             <!-- Titre de la page -->
-            <h1 class="page-title">Politique de confidentialité</h1>
+            <h1 class="page-title">Nos Services</h1>
             
             <!-- Introduction -->
-            <section class="policy-section">
-                <h2>Introduction</h2>
-                <p>L’Organisation à but non lucratif Wokovuway s’engage à protéger la vie privée de tous les individus. Cette politique de confidentialité décrit les méthodes de collecte, d’utilisation, de divulgation et de protection des informations personnelles lors de l’interaction avec le site web, des dons ou de l’engagement avec les services proposés. En utilisant nos services, les individus consentent aux termes énoncés dans cette politique. La politique a été mise à jour pour la dernière fois le 11 mars 2025.</p>
+            <section class="services-section">
+                <h2>Renforcer les communautés</h2>
+                <p>À l'Organisation Wokovuway, nous offrons une gamme de services humanitaires visant à améliorer la vie des populations vulnérables en République Démocratique du Congo et au-delà. Nos programmes sont conçus pour répondre aux besoins immédiats tout en favorisant une résilience et une croissance à long terme. Dernière mise à jour : 13 mars 2025.</p>
             </section>
 
-            <!-- Informations que nous collectons -->
-            <section class="policy-section">
-                <h2>Informations que nous collectons</h2>
-                <p>Nous pouvons collecter les types d’informations suivants :</p>
-                <ul>
-                    <li><strong>Informations personnelles :</strong> Nom, adresse email, numéro de téléphone et adresse postale lorsque vous faites un don, nous contactez ou remplissez des formulaires sur notre site web.</li>
-                    <li><strong>Informations non personnelles :</strong> Type de navigateur, adresse IP et données d’utilisation collectées via des cookies et des outils d’analyse pour améliorer nos services.</li>
-                    <li><strong>Détails des dons :</strong> Informations sur vos dons (par exemple, type, détails supplémentaires) pour traiter et reconnaître vos contributions.</li>
+            <!-- Aide humanitaire -->
+            <section class="services-section">
+                <h2>Aide humanitaire</h2>
+                <div class="service-item">
+                    <h3>Secours d’urgence</h3>
+                    <p>Nous fournissons des fournitures essentielles telles que de la nourriture, de l’eau, des abris et des soins médicaux aux communautés touchées par les conflits, les déplacements ou les catastrophes naturelles.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Services de santé</h3>
+                    <p>Nos cliniques mobiles et programmes de sensibilisation à la santé offrent des soins médicaux essentiels, des vaccins et un soutien à la santé maternelle dans les zones mal desservies.</p>
+                </div>
+            </section>
+
+            <!-- Éducation et formation -->
+            <section class="services-section">
+                <h2>Éducation et formation</h2>
+                <div class="service-item">
+                    <h3>Programmes d’alphabétisation</h3>
+                    <p>Nous proposons une éducation de base aux enfants et aux adultes, les aidant à acquérir des compétences en lecture et en calcul pour améliorer leurs opportunités.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Formation professionnelle</h3>
+                    <p>Grâce à des ateliers et des cours de développement de compétences, nous dotons les individus de métiers tels que la couture, la menuiserie et l’agriculture pour atteindre l’autosuffisance.</p>
+                </div>
+            </section>
+
+            <!-- Autonomisation communautaire -->
+            <section class="services-section">
+                <h2>Autonomisation communautaire</h2>
+                <div class="service-item">
+                    <h3>Autonomisation des femmes</h3>
+                    <p>Nous soutenons les femmes avec des ressources, des formations et des opportunités de microfinance pour démarrer de petites entreprises et diriger leurs communautés.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Développement des jeunes</h3>
+                    <p>Nos programmes engagent les jeunes à travers le mentorat, la formation au leadership et des activités récréatives pour construire un avenir meilleur.</p>
+                </div>
+            </section>
+
+            <!-- Impliquez-vous -->
+            <section class="services-section">
+                <h2>Impliquez-vous</h2>
+                <p>Voulez-vous soutenir nos services ? Vous pouvez faire une différence en :</p>
+                <ul class="involvement-list">
+                    <li><a href="donate_fr.html">Faisant un don</a> pour financer nos programmes.</li>
+                    <li><a href="volunteer_fr.html">Devenant bénévole</a> avec votre temps et vos compétences.</li>
+                    <li><a href="contact_fr.html">Nous contactant</a> pour en savoir plus sur les opportunités de partenariat.</li>
                 </ul>
-            </section>
-
-            <!-- Comment nous utilisons vos informations -->
-            <section class="policy-section">
-                <h2>Comment nous utilisons vos informations</h2>
-                <p>Nous utilisons vos informations pour :</p>
-                <ul>
-                    <li>Traiter les dons et fournir des reçus ou des remerciements.</li>
-                    <li>Communiquer avec vous au sujet de nos programmes, événements et mises à jour (avec votre consentement).</li>
-                    <li>Améliorer notre site web et nos services grâce à des analyses et des retours.</li>
-                    <li>Respecter les obligations légales et protéger nos droits.</li>
-                </ul>
-            </section>
-
-            <!-- Partage des informations -->
-            <section class="policy-section">
-                <h2>Partage des informations</h2>
-                <p>Nous ne vendons ni ne louons vos informations personnelles. Nous pouvons les partager avec :</p>
-                <ul>
-                    <li><strong>Fournisseurs de services :</strong> Fournisseurs tiers (par exemple, processeurs de paiement, services d’email) qui nous assistent, liés par des accords de confidentialité.</li>
-                    <li><strong>Partenaires :</strong> Organisations comme Médecins Sans Frontières ou MenEngage pour des initiatives conjointes, avec votre consentement lorsque requis.</li>
-                    <li><strong>Autorités légales :</strong> Si requis par la loi ou pour protéger les intérêts de Wokovuway.</li>
-                </ul>
-            </section>
-
-            <!-- Sécurité des données -->
-            <section class="policy-section">
-                <h2>Sécurité des données</h2>
-                <p>Nous mettons en œuvre des mesures de sécurité raisonnables (par exemple, cryptage, serveurs sécurisés) pour protéger vos informations. Cependant, aucune transmission en ligne n’est totalement sécurisée, et nous ne pouvons garantir une sécurité absolue.</p>
-            </section>
-
-            <!-- Vos droits -->
-            <section class="policy-section">
-                <h2>Vos droits</h2>
-                <p>Vous avez le droit de :</p>
-                <ul>
-                    <li>Accéder, mettre à jour ou supprimer vos informations personnelles en nous contactant à <a href="mailto:info@wokovuway.org">info@wokovuway.org</a>.</li>
-                    <li>Vous désinscrire des communications marketing à tout moment via les préférences email.</li>
-                    <li>Demander des informations sur la manière dont vos données sont utilisées.</li>
-                </ul>
-            </section>
-
-            <!-- Cookies -->
-            <section class="policy-section">
-                <h2>Cookies</h2>
-                <p>Nous utilisons des cookies pour améliorer votre expérience, analyser le trafic et personnaliser le contenu. Vous pouvez gérer les préférences de cookies via les paramètres de votre navigateur.</p>
-            </section>
-
-            <!-- Modifications de la politique -->
-            <section class="policy-section">
-                <h2>Modifications de cette politique</h2>
-                <p>Nous pouvons mettre à jour cette politique de confidentialité périodiquement. Les modifications seront publiées ici avec la date mise à jour. L’utilisation continue de nos services après les modifications implique l’acceptation.</p>
             </section>
 
             <!-- Contactez-nous -->
-            <section class="policy-section">
+            <section class="services-section">
                 <h2>Contactez-nous</h2>
-                <p>Si vous avez des questions sur cette politique de confidentialité, contactez-nous à :</p>
+                <p>Pour plus d’informations sur nos services, contactez-nous :</p>
                 <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
-                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
                 <p><strong>Téléphone :</strong> +243 123 456 789</p>
+                <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003, Goma, RDC</p>
             </section>
         </div>
 
@@ -124,22 +116,20 @@
                     <div class="footer-column">
                         <h4>À propos de nous</h4>
                         <p>Wokovu Way renforce les communautés par l’innovation et le soutien.</p>
-                        <a href="about.html" class="read-more">En savoir plus</a>
+                        <a href="about_french.html" class="read-more">En savoir plus</a>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
                         <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
                         <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
                         <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
-                        <a
-                            href="mailto:info@wokovuway.org?subject=Inquiry&body=Bonjour, j’ai une question à propos de...">
+                        <a href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
                     </div>
                     <div class="footer-column">
                         <h4>Liens rapides</h4>
                         <ul>
-                            <!-- liens pertinents dans le pied de page -->
                             <li><a href="index_french.html">Accueil</a></li>
                             <li><a href="about_french.html">À propos de nous</a></li>
                             <li><a href="service_fr.html">Services</a></li>
@@ -147,51 +137,45 @@
                             <li><a href="privacy_fr.html">Confidentialité et politique</a></li>
                         </ul>
                     </div>
-
-                    <!-- le reste des liens -->
-
                     <div class="footer-column">
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms_french.html">Conditions générales</a></li>
-                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
-                            <li><a href="faq_fr.html">FAQ</a></li>
-                            <li><a href="newsletter_fr.html">Lettre d’information</a></li>
-                            <li><a href="volunteer_fr.html">Bénévole</a></li>
+                            <li><a href="terms.html">Terms and Conditions</a></li>
+                            <li><a href="accessibility.html">Accessibility Statement</a></li>
+                            <li><a href="faq_fr.html" target="_blank">FAQ</a></li>
+                            <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                            <li><a href="volunteer.html">Volunteer</a></li>
                         </ul>
                     </div>
-
                     <div class="footer-column">
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
-                                    class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
-                                    class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png"
-                                alt="Partenaire 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                                alt="Partenaire 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                                alt="Partenaire 3"></a>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png"
-                                alt="Partenaire 4"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
+                            alt="Partner 1"></a>
+                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
+                            alt="Partner 2"></a>
+                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
+                            alt="Partner 3"></a>
+                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
+                            alt="Partner 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p>Conçu par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
             </div>
         </footer>
     </div>
 
-    <script src="js/privacy.js"></script>
+    <script src="js/services.js"></script>
 </body>
 </html>
