--- a/success.html
+++ b/success.html
@@ -17,11 +17,10 @@
 
 <body>
     <div id="wokovuway-wrapper">
-
         <!-- Header & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <img src="images/logos1.png" alt="Wokovuway Logo" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
@@ -29,14 +28,15 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html" class="active">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="team.html">Our Team</a></li>
                         <li><a href="success.html">Success Stories</a></li>
                         <li><a href="donate.html">Donate</a></li>
                         <li><a href="contact.html">Contact</a></li>
-
                         <li class="lang-toggle">
-                            <a href="#" id="translate-link"><i class="fas fa-globe"></i> Fr </a>
+                            <a href="success_french.html" title="Switch to French">
+                                <i class="fas fa-globe"></i> FR
+                            </a>
                         </li>
                     </ul>
                 </nav>
@@ -134,19 +134,21 @@
                 <div class="footer-row">
                     <div class="footer-column">
                         <h4>About Us</h4>
-                        <p>Wokovu Way is dedicated to empowering communities through innovation and support.</p>
+                        <p>Wokovu Way empowers communities through innovation and support.</p>
                         <a href="about.html" class="read-more">Read More</a>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
                         <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003</p>
-                        <p><strong>Phone:</strong> +243 123 456 789</p>
-                        <p><strong>Email:</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
+                        <p class="italic"><strong>Phone:</strong><span class="phone"> +243 123 456 789</span></p>
+                        <p class="italic"><strong>Office:</strong> <span class="phone">+243 123 456 789</span></p>
+                        <a href="mailto:info@wokovuway.org?subject=Inquiry&body=Hello, I have a question about...">
+                            <span class="email">info@wokovuway.org</span>
+                        </a>
                     </div>
                     <div class="footer-column">
                         <h4>Quick Links</h4>
                         <ul>
-                            <!-- liens pertinents dans le pied de page -->
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="service.html">Services</a></li>
@@ -154,17 +156,17 @@
                             <li><a href="privacy.html">Privacy and Policy</a></li>
                         </ul>
                     </div>
-                    
-                    <!-- le reste des liens -->
-                    
                     <div class="footer-column">
                         <br>
                         <br>
                         <ul>
                             <li><a href="terms.html">Terms and Conditions</a></li>
                             <li><a href="accessibility.html">Accessibility Statement</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
-                            <li><a href="newsletter.html">Newsletter</a></li>
+                            <a href="faq.html" target="_blank">FAQ</a>
+                            <ul>
+                                <li><a href="newsletter.html" target="_blank">Newsletter</a></li>
+                            </ul>
+
                             <li><a href="volunteer.html">Volunteer</a></li>
                         </ul>
                     </div>
@@ -180,15 +182,14 @@
                     </div>
                     <div class="partners">
                         <h4>Our Partners</h4>
-                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png"
-                                alt="Partner 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                                alt="Partner 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                                alt="Partner 3"></a>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png"
-                                alt="Partner 4"></a>
-                    </div>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
+                            alt="Partner 1"></a>
+                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
+                            alt="Partner 2"></a>
+                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
+                            alt="Partner 3"></a>
+                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
+                            alt="Partner 4"></a>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -196,7 +197,6 @@
                 <p>Designed by <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
             </div>
         </footer>
-
         <script src="js/success.js"></script>
 </body>
 
