--- a/volunteer_fr.html
+++ b/volunteer_fr.html
@@ -18,19 +18,25 @@
         <!-- En-tête & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
-                <a href="index.html" class="logo">
+                <a href="index_french.html" class="logo">
                     <img src="images/logos1.png" alt="Logo Wokovuway" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
                 <div class="hamburger"><i class="fas fa-bars"></i></div>
                 <nav class="nav-menu">
                     <ul>
-                        <li><a href="index.html">Accueil</a></li>
-                        <li><a href="about.html">À propos</a></li>
-                        <li><a href="team.html">Notre équipe</a></li>
-                        <li><a href="success.html">Histoires de succès</a></li>
-                        <li><a href="donate.html">Faire un don</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index_french.html">Accueil</a></li>
+                        <li><a href="about_french.html">À propos de nous</a></li>
+                        <li><a href="team_french.html">Notre équipe</a></li>
+                        <li><a href="success_french.html">Histoires de succès</a></li>
+                        <li><a href="donate_french.html">Faire un don</a></li>
+                        <li><a href="contact_french.html">Contact</a></li>
+
+                        <li class="lang-toggle">
+                            <a href="volunteer.html" title="Passer à l'anglais">
+                                <i class="fas fa-globe"></i> EN
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -148,7 +154,7 @@
                     <div class="footer-column">
                         <h4>À propos de nous</h4>
                         <p>Wokovu Way renforce les communautés par l’innovation et le soutien.</p>
-                        <a href="about.html" class="read-more">En savoir plus</a>
+                        <a href="about_french.html" class="read-more">En savoir plus</a>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
@@ -156,14 +162,13 @@
                         <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
                         <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
                         <a
-                            href="mailto:info@wokovuway.org?subject=Inquiry&body=Bonjour, j’ai une question à propos de...">
+                            href="mailto:info@wokovuway.org?subject=Demande&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
                     </div>
                     <div class="footer-column">
                         <h4>Liens rapides</h4>
                         <ul>
-                            <!-- liens pertinents dans le pied de page -->
                             <li><a href="index_french.html">Accueil</a></li>
                             <li><a href="about_french.html">À propos de nous</a></li>
                             <li><a href="service_fr.html">Services</a></li>
@@ -171,21 +176,20 @@
                             <li><a href="privacy_fr.html">Confidentialité et politique</a></li>
                         </ul>
                     </div>
-
-                    <!-- le reste des liens -->
-
                     <div class="footer-column">
                         <br>
                         <br>
                         <ul>
-                            <li><a href="terms_french.html">Conditions générales</a></li>
-                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
-                            <li><a href="faq_fr.html">FAQ</a></li>
-                            <li><a href="newsletter_fr.html">Lettre d’information</a></li>
-                            <li><a href="volunteer_fr.html">Bénévole</a></li>
+                            <li><a href="terms.html">Terms and Conditions</a></li>
+                            <li><a href="accessibility.html">Accessibility Statement</a></li>
+                            <a href="faq.html" target="_blank">FAQ</a>
+                            <ul>
+                                <li><a href="newsletter_fr.html" target="_blank">Newsletter</a></li>
+                            </ul>
+
+                            <li><a href="volunteer.html">Volunteer</a></li>
                         </ul>
                     </div>
-
                     <div class="footer-column">
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
@@ -198,20 +202,20 @@
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png"
-                                alt="Partenaire 1"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
+                                alt="Partner 1"></a>
                         <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                                alt="Partenaire 2"></a>
+                                alt="Partner 2"></a>
                         <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
-                                alt="Partenaire 3"></a>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png"
-                                alt="Partenaire 4"></a>
+                                alt="Partner 3"></a>
+                        <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png"
+                                alt="Partner 4"></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. Tous droits réservés.</p>
-                <p>Conçu par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p> Conçu et développé par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
             </div>
         </footer>
     </div>
